# DjangoBlog

./: .dockerignore  .env-sample  .gitignore  Dockerfile  Pipfile  README.md  docker-compose.yml  entrypoint.sh  liara.json  pyproject.toml  requirements.txt
.github/workflows/: liara.yaml
account/: admin.py  forms.py  mixins.py  models.py  urls.py  views.py
account/migrations/: 0001_initial.py  0002_auto_20220714_1648.py  0003_alter_user_email.py
api/: serializers.py  urls.py  views.py
blog/: admin.py  middleware.py  models.py  urls.py  views.py
blog/migrations/: 0001_initial.py  0002_category.py  0003_auto_20220625_1327.py  0004_post_category.py  0005_alter_post_options.py  0006_alter_post_category.py  0007_category_parent.py  0008_auto_20220707_1941.py  0009_alter_post_status.py  0010_post_is_special.py  0011_auto_20220720_2035.py  0012_auto_20220721_0050.py  0013_post_hits.py  0014_alter_category_position.py
blog/templatetags/: base_tags.py
comment/conf/: defaults.py
comment/migrations/: 0013_auto_20220720_2328.py
comment/views/: comments.py
config/: settings.py  urls.py
extensions/: utils.py
nginx/: Dockerfile  default.conf
templates/blog/: author_list.html  base.html  category_list.html  list.html  post_detail.html  post_list.html  search_list.html
templates/comment/: bootstrap.html  static.html
templates/registration/: account_activation.html  auth_message.html  base.html  base_auth.html  category-create-update.html  category-list.html  category_confirm_delete.html  home.html  login.html  password_change_done.html  profile.html  (+9 more)
(+32 files in other folders)
